--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1303,3 +1303,4 @@
 @import 'foundation/components/pagination';
 @import 'foundation/components/tables';
 @import 'foundation/components/thumbs';
+@import 'foundation/components/top-bar';
