--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,33 +1,14 @@
 .row.compact-content
   .medium-6.medium-offset-3.columns
-    = form_for resource, as: resource_name, url: registration_path(resource_name), data: {abide: true} do |f|
-      = devise_error_messages!
+    = simple_form_for resource, as: resource_name, url: registration_path(resource_name), data: {abide: true} do |f|
 
-      div
-        = f.email_field :email, autofocus: true, placeholder: 'Вашият имейл', required: true
-        small.error Необходимо е да въведете своя имейл адрес.
+      - f.with_options label: false do |f|
+        = f.input :email, autofocus: true, required: true
+        = f.input :password, autocomplete: 'off', required: true
+        = f.input :password_confirmation, autocomplete: 'off', required: true
+        = f.input :first_name, required: true
+        = f.input :last_name, required: true
 
-      div
-        = f.password_field :password, autocomplete: 'off', placeholder: 'Парола', required: true
-        small.error Моля въведете паролата си.
-
-      div
-        = f.password_field :password_confirmation,
-                            autocomplete: 'off',
-                            placeholder: 'Паролата отново',
-                            required: true,
-                            data: {equalto: 'user_password'}
-        small.error Потвърждението на паролата ви не съвпада.
-
-      div
-        = f.text_field :first_name, placeholder: 'Малко име', required: true
-        small.error Необходимо е да въведете името си.
-
-      div
-        = f.text_field :last_name, placeholder: 'Фамилия', required: true
-        small.error Необходимо е да въведете фамилията си.
-
-      div
-        = f.submit 'Регистрация', class: 'button'
+      = f.button :submit, 'Регистрация', class: 'button'
 
     = render 'devise/shared/links'
