First and last name are required user fields

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -6,8 +6,8 @@
         = f.input :email, autofocus: true, required: true
         = f.input :password, autocomplete: 'off', required: true
         = f.input :password_confirmation, autocomplete: 'off', required: true
-        = f.input :first_name, required: true
-        = f.input :last_name, required: true
+        = f.input :first_name
+        = f.input :last_name
 
       = f.button :submit, 'Регистрация', class: 'button'
 
