--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -5,7 +5,7 @@
       - f.with_options label: false do |f|
         = f.input :email, autofocus: true, required: true
         = f.input :password, autocomplete: 'off', required: true
-        = f.input :password_confirmation, autocomplete: 'off', required: true
+        = f.input :password_confirmation, autocomplete: 'off'
         = f.input :first_name
         = f.input :last_name
 
